@@ -1,36 +1,69 @@
+/*
+ ###############################################################################
+ #                                                                             #
+ #    Copyright (C) 2011-2012 OpenMEAP, Inc.                                   #
+ #    Credits to Jonathan Schang & Robert Thacher                              #
+ #                                                                             #
+ #    Released under the LGPLv3                                                #
+ #                                                                             #
+ #    OpenMEAP is free software: you can redistribute it and/or modify         #
+ #    it under the terms of the GNU Lesser General Public License as published #
+ #    by the Free Software Foundation, either version 3 of the License, or     #
+ #    (at your option) any later version.                                      #
+ #                                                                             #
+ #    OpenMEAP is distributed in the hope that it will be useful,              #
+ #    but WITHOUT ANY WARRANTY; without even the implied warranty of           #
+ #    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the            #
+ #    GNU Lesser General Public License for more details.                      #
+ #                                                                             #
+ #    You should have received a copy of the GNU Lesser General Public License #
+ #    along with OpenMEAP.  If not, see <http://www.gnu.org/licenses/>.        #
+ #                                                                             #
+ ###############################################################################
+ */
+
 package com.openmeap.thinclient;
 
-import java.util.Properties;
 import java.util.Date;
+import java.util.Hashtable;
+
+import com.openmeap.util.StringUtils;
+import com.openmeap.util.UUID;
+import com.openmeap.util.Utils;
 
 /**
  * The non-OS specific configuration universal to all Java based slic clients
  * @author schang
  */
-public class SLICConfig {
+abstract public class SLICConfig {
 	
 	public static String PROPERTIES_FILE = "slic-config.properties";
 	public static String PREFERENCES_FILE = "slic-config.preferences";
 	public static String SLIC_VERSION = "0.0.1a";
-	public static String DEVICE_TYPE = "Android";
 	
-	protected Properties properties = null;
+	protected Hashtable properties = null;
 	protected Preferences preferences = null;
 	
 	/**
 	 * @param preferences
 	 * @param propertiesStream
 	 */
-	public SLICConfig(Preferences preferences, Properties properties) {
+	public SLICConfig(Preferences preferences, Hashtable properties) {
 		this.preferences = preferences;
 		this.properties = properties;
 	}
 	
+	abstract public String getAssetsBaseUrl();
+	
+	/**
+	 * TODO: rename to applicationInstallationUuid
+	 * @return
+	 */
 	public String getDeviceUuid() {
 		String uuid = getProperty("com.openmeap.slic.deviceUuid");
-		if( uuid == null ) {
+		if( StringUtils.isEmpty(uuid) ) {
 			// TODO: this should be generated from device serials, application name, version, slic version, etc...so as to avoid collisions
-			uuid = java.util.UUID.randomUUID().toString();
+			uuid = UUID.randomUUID();
 			setProperty("com.openmeap.slic.deviceUuid", uuid);
 		}
 		return uuid;
@@ -66,7 +99,7 @@ public class SLICConfig {
 	public Boolean getNotFirstRun() {
 		String notFirstRun = getProperty("com.openmeap.slic.notFirstRun");
 		if( notFirstRun!=null ) {
-			return Boolean.valueOf(notFirstRun);
+			return new Boolean(Utils.parseBoolean(notFirstRun));
 		}
 		return null;
 	}
@@ -80,12 +113,12 @@ public class SLICConfig {
 		return getProperty("com.openmeap.slic.deviceType");
 	}
 	public Boolean shouldPerformUpdateCheck() {
-		return Boolean.valueOf(isTimeForUpdateCheck().booleanValue() && getProperty("com.openmeap.slic.pullUpdates").equals("true"));
+		return new Boolean(isTimeForUpdateCheck().booleanValue() && getProperty("com.openmeap.slic.pullUpdates").equals("true"));
 	}
 	public Boolean isDevelopmentMode() {
 		String devMode = getProperty("com.openmeap.slic.developmentMode");
 		if( devMode!=null ) {
-			return Boolean.valueOf(devMode);
+			return new Boolean(Utils.parseBoolean(devMode));
 		}
 		return Boolean.FALSE;
 	}
@@ -95,19 +128,21 @@ public class SLICConfig {
     	boolean shouldUpdate = true;
     	if( lastUpdate!=null ) {
     		Date now = new Date();
-    		shouldUpdate = getUpdateFrequency()!=null? ((now.getTime()-lastUpdate.longValue())/1000 > getUpdateFrequency().intValue()) : false;
+    		long secondsSince = (now.getTime()-lastUpdate.longValue())/(long)1000;
+    		long secondsInterval = getUpdateFrequency()!=null ? getUpdateFrequency().intValue() : 0;
+    		shouldUpdate = secondsSince > secondsInterval;
     	}
-		return Boolean.valueOf(shouldUpdate);
+		return new Boolean(shouldUpdate);
 	}
 	public Boolean isVersionOriginal(String version) {
-		if( version.equals( properties.getProperty("com.openmeap.slic.appVersion") ) )
+		if( version.equals( properties.get("com.openmeap.slic.appVersion") ) )
 			return Boolean.TRUE;
 		return Boolean.FALSE;
 	}
 	
 	public Long getLastUpdateAttempt() {
 		String lua = getProperty("com.openmeap.slic.lastUpdateAttempt");
-		return lua!=null?Long.valueOf(lua):null;
+		return lua!=null?new Long(Long.parseLong(lua)):null;
 	}
 	public void setLastUpdateAttempt(Long time) {
 		setProperty("com.openmeap.slic.lastUpdateAttempt",String.valueOf(time));
@@ -130,7 +165,7 @@ public class SLICConfig {
 	 */
 	public Boolean getApplicationUpdated() {
 		String updated = getProperty("com.openmeap.slic.appUpdated");
-		return updated!=null?Boolean.valueOf(updated):null;
+		return updated!=null?new Boolean(Utils.parseBoolean(updated)):null;
 	}
 	public void setApplicationUpdated(Boolean updated) {
 		setProperty("com.openmeap.slic.appUpdated",updated.toString());
@@ -152,6 +187,14 @@ public class SLICConfig {
 		setProperty("com.openmeap.slic.storageLocation",locationPrefix);
 	}
 	
+	public Boolean shouldUseAssetsOrSdCard() {
+    	return new Boolean( getStorageLocation()==null || isVersionOriginal(getApplicationVersion()).booleanValue() );
+    }
+	
+	public String getPackagedAppRoot() {
+		return /*"assets:///"+*/this.getProperty("com.openmeap.slic.packagedAppRoot");
+	}
+	
 	/*
 	 * PRIVATE METHODS
 	 */
@@ -165,12 +208,15 @@ public class SLICConfig {
 	 */
 	protected String getProperty(String name) {
 		String value = preferences.get(name);
-		if( value==null )
-			value = properties.getProperty(name);
+		if( value==null ) {
+			value = (String)properties.get(name);
+		}
 		return value;
 	}
 	
 	protected void setProperty(String name, String value) {
 		preferences.put(name, value);
 	}
+	
+	
 }
